--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
 		"prettier": "prettier --write ."
 	},
 	"dependencies": {
+		"@tanstack/react-query": "^5.90.12",
 		"@uidotdev/react-query-api": "^0.1.18",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-icons": "^4.3.1",
-		"react-query": "^4.0.0-beta.3",
-		"react-router-dom": "^6.1.1"
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-icons": "^4.12.0",
+		"react-router-dom": "^6.30.2"
 	},
 	"devDependencies": {
-		"@vitejs/plugin-react": "^1.0.0",
+		"@vitejs/plugin-react": "^1.3.2",
 		"prettier": "3.7.4",
-		"vite": "^2.6.4"
+		"vite": "^2.9.18"
 	}
 }
