--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
-	"useTabs": true,
-	"tabWidth": 2,
-	"printWidth": 100,
-	"endOfLine": "lf"
+  "useTabs": false,
+  "tabWidth": 2,
+  "printWidth": 100,
+  "endOfLine": "lf"
 }
